# file-aggregator

./: CHANGELOG.md  Cargo.toml  README.md  cliff.toml
src/: cli.rs  file_operations.rs  main.rs
