[package]
name = "file_aggregator"
version = "0.1.0"
authors = ["Borna Cvitanić borna.cvitanic@gmail.com"]
edition = "2021"

[[bin]]
name = "fileagg"
path = "src/main.rs"

[dependencies]
# command-line interface (CLI)
clap = {version = "4.5.9", features = ["derive"]}
# file system navigation
walkdir = "2.5.0"
## clipboard access
copypasta = "0.10.1"