[package]
name = "file_aggregator"
version = "0.2.0"
authors = ["Borna Cvitanić borna.cvitanic@gmail.com"]
description = "File Aggregator is a utility for aggregating and distributing file contents. It allows you to combine file contents from a specified directory into a single text, which is copied to the clipboard. You can also distribute file contents from the clipboard back to their respective files based on the relative paths."
repository = "https://github.com/bornacvitanic/file_aggregator"
edition = "2021"
license = "MIT"
keywords = ["CLI", "file", "aggregation", "clipboard", ]
categories = ["command-line-utilities", "filesystem", "text-processing", "data-structures", "development-tools"]

[[bin]]
name = "fileagg"
path = "src/main.rs"

[dependencies]
# command-line interface (CLI)
clap = {version = "^4.5.9", features = ["derive"]}
# file system navigation
walkdir = "^2.5.0"
## clipboard access
copypasta = "^0.10.1"

[dev-dependencies]
tempfile = "^3.10.1"